--- a/source/innovation/index.html.erb
+++ b/source/innovation/index.html.erb
@@ -9,19 +9,17 @@ subheader: "How does healthcare innovate? Datica explores this topic in a new se
 layout: basic
 customCSS: "innovation"
 ---
-<div class="container-gray-5 container-image--fixed" data-interchange="[//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?fit=thumb&w=800&h=800&q=40, small], [//images.ctfassets.net/189dvqdsjh46/3gflDVmPuoecamYsY6OOSI/90c46d15b8af71129e3612ac010c0574/city_blurry_bokeh_chuttersnap-179223.jpg?w=1200&q=50, large]">
-    <div class="container-color--tint-70">
-        <!-- <div class="container-color--dark-alt container-image--bottom" data-interchange="[/public/img/art/art-sound-bars-bg.svg, small]"> -->
-        <%= partial "partials/head/header", :locals => { :style => "light" } %>
-        <section id="top" class="section-article">
-            <div class="row">
-                <div class="columns small-12 medium-8 featured-post">
-                    <h1 class="headline-1 headline--inverted"><%= current_page.data.header %></h1>
-                    <p class="lead"><%= current_page.data.subheader %></p>
-                </div>
+<div class="bg-dark bg-blue-purple-grad">
+    <!-- <div class="container-color--dark-alt container-image--bottom" data-interchange="[/public/img/art/art-sound-bars-bg.svg, small]"> -->
+    <%= partial "partials/head/header", :locals => { :style => "light" } %>
+    <section id="top" class="section-article">
+        <div class="row">
+            <div class="columns small-12 medium-8 featured-post">
+                <h1 class="headline-1 headline--inverted"><%= current_page.data.header %></h1>
+                <p class="lead"><%= current_page.data.subheader %></p>
             </div>
-        </section>
-    </div>
+        </div>
+    </section>
 
 <%#= partial "partials/section-promos/aws-mlh-video", 
     :locals => {
@@ -55,22 +53,7 @@ customCSS: "innovation"
         <div class="row row--card-grid full-width align-center small-up-1 medium-up-2 large-up-4">
         <% sorted_reports[1...4].each do | id, report | %>
             <div class="column">
-                <div class="card drop">
-                    <% if report.has_key?("bg_image") %>
-                        <a class="container-image-fill card-header-image container-gray-3" href="/innovation/<%= report.slug %>" title="Get your free report" data-interchange="[<%= report.bg_image.url %>?fit=thumb&w=600&h=300&q=45, small], [<%= report.bg_image.url %>?fit=thumb&w=800&h=400, medium]">
-                    <% else %>
-                        <a class="card-header-image card-header-image--compact container-gray-3" href="/innovation/<%= report.slug %>" title="Get your free report">
-                    <% end %>
-                            <% if report.has_key?("subhead") %><span class="card-header-subhead"><%= report.subhead %></span><% end %>
-                            <h2 class="headline-5 card-header-title ribbon--gray-1"><%= report.title %></h2>
-                            <%= inline_svg("icon-arrow-right-circle-large", class: "icon-size--xlarge card-header-icon svg-color--white") %>
-                        </a>
-                    <div class="card-section">
-                        <% if report.has_key?("lead") %>
-                            <%= Kramdown::Document.new(report["lead"]).to_html %>
-                        <% end %>
-                    </div>
-                </div>
+                <%= partial "partials/cards/card-report", :locals => { :post => report, :style => "dark", :size => "small" } %>
             </div>
         <% end %>
         </div>
@@ -82,7 +65,7 @@ customCSS: "innovation"
     <%= partial "/partials/section-promos/leadership-gallery" %>
 
     <% sorted_podcasts = data.site.podcast.to_a.sort_by{ |id, podcast| podcast['pub_date'] }.reverse! %>
-    <section data-magellan-target="discoverInnovation" id="discoverInnovation" class="discover--podcast section-article container-color--dark-alt container-image--middle" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/19d5iulqaYg8ACWcYQ6Im6/3f883ec8f77add5b22a497e3b3d63e6d/art-sound-bars-purple.svg, small]">
+    <section data-magellan-target="discoverInnovation" id="discoverInnovation" class="lozad discover--podcast section-article container-color--dark-alt container-image--middle" data-background-image="https://images.ctfassets.net/189dvqdsjh46/19d5iulqaYg8ACWcYQ6Im6/3f883ec8f77add5b22a497e3b3d63e6d/art-sound-bars-purple.svg">
         <div class="row align-center collapse">
             <div class="columns small-12 large-10">
                 <h3 class="innovation--section-header">Healthcare Innovators <span class="innovation--category">Podcast</span></h3>
@@ -93,7 +76,7 @@ customCSS: "innovation"
                                 <% if podcast["guest"].has_key?("fullname") %>
                                     <div class="person-vertical show-for-medium">
                                         <a class="" href="/innovation/<%= podcast["slug"] %>" title="Listen to this episode now">
-                                            <img data-interchange="[<%= podcast["guest"]["profile_pic"]["url"] %>?fit=thumb&w=400&h=400&f=face&q=45, medium]" class="avatar circle group--sm" alt="<%= podcast["guest"]["fullname"] %>">
+                                            <img src="/assets/img/loader-disc.svg" data-src="<%= podcast["guest"]["profile_pic"]["url"] %>?fit=thumb&w=400&h=400&f=face&q=45" class="lozad avatar circle group--sm" alt="<%= podcast["guest"]["fullname"] %>">
                                         </a>
                                         <div class="text-center">
                                             <div class="person-name"><%= podcast["guest"]["fullname"] %></div>
