--- a/source/partials/scripts/_footer.erb
+++ b/source/partials/scripts/_footer.erb
@@ -31,3 +31,5 @@
 <%# unless current_page.data.has_key?("smoothScroll") && current_page.data.smoothScroll == false %>
 	<%#<script defer src="/public/js/smooth-scroll.js"></script> %>
 <%# end %>
+<%# experimental: prefetch links on hover %>
+<script src="//instant.page/1.1.0" type="module" integrity="sha384-EwBObn5QAxP8f09iemwAJljc+sU+eUXeL9vSBw1eNmVarwhKk2F9vBEpaN9rsrtp"></script>
