--- a/source/innovation/index.html.erb
+++ b/source/innovation/index.html.erb
@@ -76,7 +76,7 @@ customCSS: "innovation"
                                 <% if podcast["guest"].has_key?("fullname") %>
                                     <div class="person-vertical show-for-medium">
                                         <a class="" href="/innovation/<%= podcast["slug"] %>" title="Listen to this episode now">
-                                            <img src="/assets/img/loader-disc.svg" data-src="<%= podcast["guest"]["profile_pic"]["url"] %>?fit=thumb&w=400&h=400&f=face&q=45" class="lozad avatar circle group--sm" alt="<%= podcast["guest"]["fullname"] %>">
+                                            <img src="https://images.ctfassets.net/189dvqdsjh46/7dsvS1pbuo2etN908phqGD/4acf3ebbf566f0f31cf74882f6faa3e8/loader-disc.svg" data-src="<%= podcast["guest"]["profile_pic"]["url"] %>?fit=thumb&w=400&h=400&f=face&q=45" class="lozad avatar circle group--sm" alt="<%= podcast["guest"]["fullname"] %>">
                                         </a>
                                         <div class="text-center">
                                             <div class="person-name"><%= podcast["guest"]["fullname"] %></div>
