Pulling out the 300 (light) weight of GT America, to see if we can do without. Already loading lots of other weights and italics too.

--- a/source/assets/scss/modules/fonts.scss
+++ b/source/assets/scss/modules/fonts.scss
@@ -38,19 +38,19 @@ $fam: GT America;
 //     font-style: italic;
 // }
 
-@font-face{
-    src: url('/public/fonts/gt-america-light.woff') format('woff');
-    font-family: $fam;
-    font-display: optional;
-    font-weight: 300;
-}
-@font-face{
-    src: url('/public/fonts/gt-america-lightitalic.woff') format('woff');
-    font-family: $fam;
-    font-display: optional;
-    font-weight: 300;
-    font-style: italic;
-}
+// @font-face{
+//     src: url('/public/fonts/gt-america-light.woff') format('woff');
+//     font-family: $fam;
+//     font-display: optional;
+//     font-weight: 300;
+// }
+// @font-face{
+//     src: url('/public/fonts/gt-america-lightitalic.woff') format('woff');
+//     font-family: $fam;
+//     font-display: optional;
+//     font-weight: 300;
+//     font-style: italic;
+// }
 
 @font-face{
     src: url('/public/fonts/gt-america-regular.woff') format('woff');
