rawgit CDN is deprecated, jsdelivr now

--- a/source/contentful_templates/academy.html.slim
+++ b/source/contentful_templates/academy.html.slim
@@ -110,5 +110,5 @@ section.bg-white.section-article
               = partial "partials/cards/card-report-simple", :locals => { :post => guide_entry, :style => "none", :size => "small", :desc => true, :show_button => true }
 
 = partial "partials/snippets/json-ld-article"
-<script type="text/javascript" defer src="https://cdn.rawgit.com/google/code-prettify/master/loader/run_prettify.js?autorun=true&skin=desert"></script>
+<script type="text/javascript" defer src="https://cdn.jsdelivr.net/gh/google/code-prettify@master/loader/run_prettify.js?autorun=true&skin=desert"></script>
 
