Fix for missing img for Rest API

--- a/source/compliant-managed-integration/index.html.slim
+++ b/source/compliant-managed-integration/index.html.slim
@@ -149,7 +149,7 @@ section.section-article.bg-gray-3
       .row.group
         .columns.small-12
           h3.headline-4 One REST API for all your connections
-          img.img-crisp.lozad alt=("One REST API for all your connections") data-src="/public/img/platform-one-api-diagram.png" /
+          img.img-crisp.lozad src=loader_rect alt=("One REST API for all your connections") data-src="https://images.ctfassets.net/189dvqdsjh46/7Lro5fg1N8hE8IT1KG7DrA/0b25b9eb6ee015318d9e0a1603b0ebb2/platform-one-api-diagram.png?w=1000" /
 
     .columns.small-12.medium-6.large-4
       .card.bg-gray-10.card-section
