Improved some handling of Guides in the collection list (used in category pages). Could make a partial/component of that later.

--- a/source/cloud-compliance/index.html.slim
+++ b/source/cloud-compliance/index.html.slim
@@ -118,7 +118,7 @@ section.section-article.pad-no-bottom.bg-gray-12
         - preview = "https://images.ctfassets.net/189dvqdsjh46/4KtjQwGLOo6UGoAY82qe6k/dd058456a0fef3d725cd5fc8a1713840/global_compliance_stance_table.png"
         img.lozad.drop.blur-in alt="Global Compliance Table" src="#{preview}?w=1200&fm=jpg&q=5" data-src="#{preview}?w=1200&fm=png&fl=png8"
 
-/ section#resources.section-article.collection.bg-gray-11
+section#resources.section-article.collection.bg-gray-11
   - related_entries = data.site.collections.to_a.select { |id, entry | (id == "2xAKQVZSKIsygICqimW0qA") }
   - related_entries.each do | id, collection |
     .row.align-center
