--- a/source/about/index.html.slim
+++ b/source/about/index.html.slim
@@ -60,46 +60,71 @@ scss:
     display: block;
     margin: 0.5rem 0;
   }
-section.section-article.container-color--dark.container-image--fixed data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3eF64DVasUAAKacOwWqmce/f63c1ea700487b2d8bda2a8110fac69e/background-about-us.jpg, small]" 
-  .row.align-center
-    .columns.small-12.large-8.text-center
-      h4.headline-6.subheader--spaced-out.text--yellow-glow About Us
-      h1.headline-3 The compliance layer for cloud native apps
-section.section-article.container-color--gray-light
+
+.bg-gray-2.container-image-fill.lozad data-background-image=bg_product_dark
+  section.section-article#top
+    .row.align-center
+      .columns.small-12.large-8.text-center
+        h1.headline-5.subheader--spaced-out.text--yellow-glow About Datica
+        h4.headline-2 We bring healthcare to the cloud.
+    .row.align-center.group--sm
+      .columns.small-12.medium-8.large-8.text-center.group
+        p.lead Datica was formed in 2013 to help healthcare technology companies move to the cloud. We help our customers <a class="link--yellow" href="/cloud-compliance" title="">achieve HIPAA compliance</a>, <a class="link--yellow" href="/ehr-integration" title="">integrate securely</a> with hospitals and EHRs, and focus on what they're best at — without worrying about compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment.
+section.section-article.bg-gray-12
+  .row.align-center.group--sm
+    .columns
+
+  - execs = data.site.collections.to_a.select { | id, collection | (id == "22eMtdZGs5yignjP47GxYH") }
+  - execs.each do | id, collection |
+    .row.align-center
+      .columns.small-12.medium-8.large-6.text-center.group
+        h2.headline-3 = (collection.has_key?("subhead") ? collection.subhead : "Datica Leadership") 
+        /p.lead = (collection.has_key?("desc") ? collection.desc : nil)
+    .row.align-center.small-up-2.medium-up-3.large-up-5
+      - collection["related_entries"].each do | person |
+        .column
+          = partial("partials/snippets/person-vertical-simple", :locals => { :p => person, :classes => "group", :use_headers => true })
+          /.person-simple
+            a href="/about/#{person.slug}" title="Learn more about #{person.fullname}"
+              img.lozad.avatar.avatar--large-mid.circle src="https://images.ctfassets.net/189dvqdsjh46/7dsvS1pbuo2etN908phqGD/4acf3ebbf566f0f31cf74882f6faa3e8/loader-disc.svg" data-src="#{person.profile_pic.url}?f=face&fit=thumb&fm=jpg&fl=progressive&w=250&h=250&fm=jpg&q=60" alt=person.fullname
+    .button-group.align-center
+      = partial "partials/snippets/button", :locals => { :label => "Meet the team", :title => "Get to know our full leadership team", :url => "/leadership/", :button_classes => "button", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "leadership", :data_track_group => "datica" }
+
+section.section-article.bg-white
   .row
-    .columns.small-12.medium-5.large-6.about-us-hero-left-block
-      .callout.drop
-        .block
-          h4.inline-highlight Why We Exist
-          h2.headline-3 Empowering Digital Health Success
-          p The complexity of compliance on the cloud is holding back the adoption of cloud native technology in highly regulated industries. By removing compliance as a concern, we do our part to help propel technology transformation in industries that lag behind. But digital health faces a multi-faceted problem, which is why we published the Digital Health Success Framework. Helping to address these challenges is why we extend our expertise into other infrastructure-related problems, like interoperability with Electronic Medical Records.
-        .block
-          h4.inline-highlight What We Are
-          h2.headline-3 The Most Secure and Compliant Infrastructure Possible
-          p The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and your application. In another words, the operating system layer of cloud native architectures. We solve that by helping you address your attestation responsibilities with a suite of products built to fit your specific use case on the cloud.
-        .block
-          h4.inline-highlight How We Do It
-          h2.headline-3 Best Practices are Best Practices
-          img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/6438fbb76abda83deac6b9c810745891/hitrust-logo.svg" /
-          p By mapping the very best compliance management frameworks, like the HITRUST CSF, to the requirements of other global regimes, we give customers a compliance story across geographies. We started with HIPAA in 2013, tackling the requirements of the most conservative and highest regulated industry on the cloud, and have expanded since then.
-        .block
-          h4.inline-highlight How We Create Value
-          h2.headline-3 Compliance Breeds Innovation
-          img.logo-size--large.float-right.lozad alt=("Cloud native computing foundation") src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" /
-          p When regulated organizations have a handle on their cloud compliance program, they can innovate at the speed necessary to keep pace with the competition. It's a disruptive world out there, and the cloud gives companies an edge. Controlling compliance on the cloud is a step towards avoiding disruption.
-        .block
-          h4.inline-highlight What We Believe
-          h2.headline-3 Trust Is Earned
-          ul
-            li Compliance moves at the speed of trust.
-            li Transparency is how complex subjects, like HIPAA or GDPR, become easier to understand. We're trusted because we're transparent.
-            li Healthcare application development shouldn't be harder than other industry just because of HIPAA. Doing business in the European Union shouldn't be harder because of GDPR. Compliance shouldn't block progress.
-            li
-              | Give back to the developer community whenever possible. Use open source tools whenever possible. Learn more about our
-              a.link-arrow href="/open-source"  open source contributions.
-            li We know we can't make the cloud better alone. Industry collaboration is important. Work together for the greater good.
+    .columns.small-12.medium-5.large-6
+      .group
+        h2.headline-5.spaced-out Why We Exist
+        h3.headline-4 Empowering Digital Health Success
+        p The complexity of compliance on the cloud is holding back the adoption of cloud native technology in the healthcare space. By removing compliance as a concern, we help our customers focus on what they do best.
+      .group
+        h2.headline-5.spaced-out What We Are
+        h3.headline-4 The Most Secure and Compliant Infrastructure Possible
+        p The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and your application. In another words, the operating system layer of cloud native architectures. We solve that by helping you address your attestation responsibilities with a suite of products built to fit your specific use case on the cloud.
+      .group
+        h2.headline-5.spaced-out How We Do It
+        h3.headline-4 Best Practices are Best Practices
+        img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/6438fbb76abda83deac6b9c810745891/hitrust-logo.svg" /
+        p By mapping the very best compliance management frameworks, like the HITRUST CSF, to the requirements of other global regimes, we give customers a compliance story across geographies. We started with HIPAA in 2013, tackling the requirements of the most conservative and highest regulated industry on the cloud, and have expanded since then.
+      .group
+        h2.headline-5.spaced-out How We Create Value
+        h3.headline-4 Compliance Breeds Innovation
+        img.logo-size--large.float-right.lozad alt=("Cloud native computing foundation") src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" /
+        p When regulated organizations have a handle on their cloud compliance program, they can innovate at the speed necessary to keep pace with the competition. It's a disruptive world out there, and the cloud gives companies an edge. Controlling compliance on the cloud is a step towards avoiding disruption.
+      .group
+        h2.headline-5.spaced-out What We Believe
+        h3.headline-4 Trust Is Earned
+        ul
+          li Compliance moves at the speed of trust.
+          li Transparency is how complex subjects, like HIPAA or GDPR, become easier to understand. We're trusted because we're transparent.
+          li Healthcare application development shouldn't be harder than other industry just because of HIPAA. Doing business in the European Union shouldn't be harder because of GDPR. Compliance shouldn't block progress.
+          li
+            | Give back to the developer community whenever possible. Use open source tools whenever possible. Learn more about our
+            a.link-arrow href="/open-source"  open source contributions.
+          li We know we can't make the cloud better alone. Industry collaboration is important. Work together for the greater good.
 
     .columns.small-12.medium-7.large-6
+      h5.spaced-out.text-center Milestones
       #timeline.timeline--vertical
         #line.line
         - current_page.data.timeline_company.each do | item |
