--- a/source/about/index.html.slim
+++ b/source/about/index.html.slim
@@ -67,9 +67,46 @@ scss:
       .columns.small-12.large-8.text-center
         h1.headline-5.subheader--spaced-out.text--yellow-glow About Datica
         h4.headline-2 We bring healthcare to the cloud.
-    .row.align-center.group--sm
+    .row.align-center.group
       .columns.small-12.medium-8.large-8.text-center.group
         p.lead Datica was formed in 2013 to help healthcare technology companies move to the cloud. We help our customers <a class="link--yellow" href="/cloud-compliance" title="">achieve HIPAA compliance</a>, <a class="link--yellow" href="/ehr-integration" title="">integrate securely</a> with hospitals and EHRs, and focus on what they're best at — without worrying about compliance. We're the experts at understanding the exact policies and procedures required to turn HIPAA-eligible services on the public cloud into architectures that can pass a HITRUST CSF assessment.
+    .row.align-center
+      .columns.small-12.large-10
+        .collection
+          .row.group--2x
+            .columns.small-12.medium-8
+              h2.headline-5.spaced-out Why We Exist
+              h3.headline-4 Empowering Digital Health Success
+              p The complexity of compliance on the cloud is holding back the adoption of cloud native technology in the healthcare space. By removing compliance as a concern, we help our customers focus on what they do best.
+          .row.group--2x
+            .columns.small-12.medium-8
+              h2.headline-5.spaced-out What We Are
+              h3.headline-4 The Most Secure and Compliant Infrastructure Possible
+              p The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and your application. In another words, the operating system layer of cloud native architectures. We solve that by helping you address your attestation responsibilities with a suite of products built to fit your specific use case on the cloud.
+          .row.group--2x
+            .columns.small-12.medium-8
+              h2.headline-5.spaced-out How We Do It
+              h3.headline-4 Best Practices are Best Practices
+              img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/1LiwzEEIDaomk00AAA8wkE/2303873d45b65774d37f01f329365850/hitrust-logo-w.svg" /
+              p By mapping the very best compliance management frameworks, like the HITRUST CSF, to the requirements of other global regimes, we give customers a compliance story across geographies. We started with HIPAA in 2013, tackling the requirements of the most conservative and highest regulated industry on the cloud, and have expanded since then.
+          .row.group--2x
+            .columns.small-12.medium-8
+              h2.headline-5.spaced-out How We Create Value
+              h3.headline-4 Compliance Breeds Innovation
+              img.logo-size--large.float-right.lozad.invert " alt=("Cloud native computing foundation") src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" /
+              p When regulated organizations have a handle on their cloud compliance program, they can innovate at the speed necessary to keep pace with the competition. It's a disruptive world out there, and the cloud gives companies an edge. Controlling compliance on the cloud is a step towards avoiding disruption.
+          .row.group--2x
+            .columns.small-12.medium-8
+              h2.headline-5.spaced-out What We Believe
+              h3.headline-4 Trust Is Earned
+              ul
+                li Compliance moves at the speed of trust.
+                li Transparency is how complex subjects, like HIPAA or GDPR, become easier to understand. We're trusted because we're transparent.
+                li Healthcare application development shouldn't be harder than other industry just because of HIPAA. Doing business in the European Union shouldn't be harder because of GDPR. Compliance shouldn't block progress.
+                li
+                  | Give back to the developer community whenever possible. Use open source tools whenever possible. Learn more about our
+                  a.link-arrow.link-arrow--yellow href="/open-source"  open source contributions.
+                li We know we can't make the cloud better alone. Industry collaboration is important. Work together for the greater good.
 section.section-article.bg-gray-12
   .row.align-center.group--sm
     .columns
@@ -91,39 +128,8 @@ section.section-article.bg-gray-12
       = partial "partials/snippets/button", :locals => { :label => "Meet the team", :title => "Get to know our full leadership team", :url => "/leadership/", :button_classes => "button", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "leadership", :data_track_group => "datica" }
 
 section.section-article.bg-white
-  .row
-    .columns.small-12.medium-5.large-6
-      .group
-        h2.headline-5.spaced-out Why We Exist
-        h3.headline-4 Empowering Digital Health Success
-        p The complexity of compliance on the cloud is holding back the adoption of cloud native technology in the healthcare space. By removing compliance as a concern, we help our customers focus on what they do best.
-      .group
-        h2.headline-5.spaced-out What We Are
-        h3.headline-4 The Most Secure and Compliant Infrastructure Possible
-        p The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and your application. In another words, the operating system layer of cloud native architectures. We solve that by helping you address your attestation responsibilities with a suite of products built to fit your specific use case on the cloud.
-      .group
-        h2.headline-5.spaced-out How We Do It
-        h3.headline-4 Best Practices are Best Practices
-        img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/6438fbb76abda83deac6b9c810745891/hitrust-logo.svg" /
-        p By mapping the very best compliance management frameworks, like the HITRUST CSF, to the requirements of other global regimes, we give customers a compliance story across geographies. We started with HIPAA in 2013, tackling the requirements of the most conservative and highest regulated industry on the cloud, and have expanded since then.
-      .group
-        h2.headline-5.spaced-out How We Create Value
-        h3.headline-4 Compliance Breeds Innovation
-        img.logo-size--large.float-right.lozad alt=("Cloud native computing foundation") src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" /
-        p When regulated organizations have a handle on their cloud compliance program, they can innovate at the speed necessary to keep pace with the competition. It's a disruptive world out there, and the cloud gives companies an edge. Controlling compliance on the cloud is a step towards avoiding disruption.
-      .group
-        h2.headline-5.spaced-out What We Believe
-        h3.headline-4 Trust Is Earned
-        ul
-          li Compliance moves at the speed of trust.
-          li Transparency is how complex subjects, like HIPAA or GDPR, become easier to understand. We're trusted because we're transparent.
-          li Healthcare application development shouldn't be harder than other industry just because of HIPAA. Doing business in the European Union shouldn't be harder because of GDPR. Compliance shouldn't block progress.
-          li
-            | Give back to the developer community whenever possible. Use open source tools whenever possible. Learn more about our
-            a.link-arrow href="/open-source"  open source contributions.
-          li We know we can't make the cloud better alone. Industry collaboration is important. Work together for the greater good.
-
-    .columns.small-12.medium-7.large-6
+  .row.align-center
+    .columns.small-12.medium-10.large-7
       h5.spaced-out.text-center Milestones
       #timeline.timeline--vertical
         #line.line
