Content ready for review. New careers block, art throughout

--- a/source/about/index.html.slim
+++ b/source/about/index.html.slim
@@ -54,6 +54,42 @@ timeline_company:
   -
     date: 'October 2018'
     body: 'Datica announces the [Cloud Compliance Management System](/cloud-compliance-management-system "CCMS") (CCMS), giving customers constant visibility of the precise state of their cloud environments.'
+stats_list:
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/7Cbcr7jzlDNIOpuGiehpwI/a03569360f53171a5c5587954a4b8370/3x_growth.svg"
+    desc: "3x Revenue Growth Since Founding"
+    url: ""
+    width: 200
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/Wya4eSOBXCvaLlatIZN4y/0469709df8f5d0f3141aca0de951e9d7/100m_records.svg"
+    desc: "We've handled over 100 million patient records."
+    url: ""
+    width: 200
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/3T2aDxazGShZJVKW0xSKtD/f6f3b6760f7558d214ccb231a938328b/17_events.svg"
+    desc: "We have spoken at 17 distinguished events. See our other events."
+    url: "/events/"
+    width: 200
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/6qs1qJbcBXtYj8xt2fjFnk/d79033ef2c0413e9804e45c74c532302/featured_partners.svg"
+    desc: "Learn how we can support you on AWS, Azure, and GCP."
+    url: "/cloud-compliance/"
+    width: 200
+  -
+    image: "https://images.ctfassets.net/189dvqdsjh46/0tDICrmYSfsnYSzn1gzgR/b4d28041c0d1e70989b151a97b0fbfbd/us_eu.png"
+    desc: "Multiple Geographies in the US and Europe"
+    url: "/cloud-compliance/global/"
+    width: 200
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/5KBMSDx9oE9NYh8NjmnCzb/19e394217d083a88f9eb6835bb163f4a/1k_assessments.svg"
+    desc: "1000 Customer Assessments. Zero Failures."
+    url: "/cloud-compliance/"
+    width: 200
+  - 
+    image: "https://images.ctfassets.net/189dvqdsjh46/94IPZQFdyyziK7tIH9iZH/1d3e925460ec3f1c7065c90ab1aede8a/oss___education.svg"
+    desc: "We're built on open source, and provide deep educational resources"
+    url: "/academy/"
+    width: 200
 ---
 scss:
   .display-block {
@@ -73,104 +109,135 @@ scss:
     .row.align-center
       .columns.small-12.large-10
         .collection
-          .row.group--2x.align-center.align-middle
+          .row.group.align-center.align-middle
             .columns.small-7.medium-8
               h2.headline-5.spaced-out.text-light Why We Exist
               h3.headline-4 Empowering Digital Health Success
               p The complexity of compliance on the cloud is holding back the adoption of cloud native technology in the healthcare space. By removing compliance as a concern, we help our customers focus on what they do best.
             .columns.small-5.medium-3
-              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/7Cbcr7jzlDNIOpuGiehpwI/1088af53aed696ee3da57e9d3ff9a51e/3x_growth.png"
+              /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/7Cbcr7jzlDNIOpuGiehpwI/1088af53aed696ee3da57e9d3ff9a51e/3x_growth.png"
 
-          .row.group--2x.align-center.align-middle
+          .row.group.align-center.align-middle
             .columns.small-7.medium-8
               h2.headline-5.spaced-out.text-light What We Are
               h3.headline-4 The Most Secure and Compliant Infrastructure Possible
-              p The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and your application. In another words, the operating system layer of cloud native architectures. We solve that by helping you address your attestation responsibilities with a suite of products built to fit your specific use case on the cloud.
+              p The hardest part about compliance on the cloud is between the physical infrastructure (which is the responsibility of AWS, Azure, or GCP) and the customer application. In another words, the operating system layer of cloud native architectures. We solve that by helping customers address attestation responsibilities with a suite of products built to fit the specific use case on the cloud.
             .columns.small-5.medium-3
-              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/0tDICrmYSfsnYSzn1gzgR/f1beb7b7b789030a72cd0396239f5945/us_eu.png"
-          .row.group--2x.align-center.align-middle
+              /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/0tDICrmYSfsnYSzn1gzgR/f1beb7b7b789030a72cd0396239f5945/us_eu.png"
+          .row.group.align-center.align-middle
             .columns.small-7.medium-8
               h2.headline-5.spaced-out.text-light How We Do It
               h3.headline-4 Best Practices are Best Practices
-              img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/016f2d364265c04e12c7db4eae95f94c/hitrust-logo.svg" /
+              img.logo-size--large.float-right.lozad alt=("HITRUST Certified") data-src="https://images.ctfassets.net/189dvqdsjh46/7ioiPF1zVKiqYkyCe4QKGi/016f2d364265c04e12c7db4eae95f94c/hitrust-logo.svg" width="180" /
               p By mapping the very best compliance management frameworks, like the HITRUST CSF, to the requirements of other global regimes, we give customers a compliance story across geographies. We started with HIPAA in 2013, tackling the requirements of the most conservative and highest regulated industry on the cloud, and have expanded since then.
             .columns.small-5.medium-3
-              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/3T2aDxazGShZJVKW0xSKtD/bfc6aa50e70bf27f3815bcb22c828470/17_events.png"
+              /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/3T2aDxazGShZJVKW0xSKtD/bfc6aa50e70bf27f3815bcb22c828470/17_events.png"
 
-          .row.group--2x.align-center.align-middle
+          .row.group.align-center.align-middle
             .columns.small-7.medium-8
               h2.headline-5.spaced-out.text-light How We Create Value
               h3.headline-4 Compliance Breeds Innovation
               img.logo-size--large.float-right.lozad alt=("Cloud native computing foundation") src="https://images.ctfassets.net/189dvqdsjh46/2qNhrxRsmEGqUOuCq2qWgU/f67da4afefb727a699a679bdcac9d630/cncf-logo-horizontal.svg" /
               p When regulated organizations have a handle on their cloud compliance program, they can innovate at the speed necessary to keep pace with the competition. It's a disruptive world out there, and the cloud gives companies an edge. Controlling compliance on the cloud is a step towards avoiding disruption.
             .columns.small-5.medium-3
-              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/6qs1qJbcBXtYj8xt2fjFnk/b948c2e6ccf1614cf5df86fd306f66c3/partners.png"
+              /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/6qs1qJbcBXtYj8xt2fjFnk/b948c2e6ccf1614cf5df86fd306f66c3/partners.png"
 
-          .row.group--2x.align-center.align-middle
+          .row.group.align-center.align-middle
             .columns.small-7.medium-8
               h2.headline-5.spaced-out.text-light What We Believe
               h3.headline-4 Trust Is Earned
               ul
-                li Compliance moves at the speed of trust.
-                li Transparency is how complex subjects, like HIPAA or GDPR, become easier to understand. We're trusted because we're transparent.
-                li Healthcare application development shouldn't be harder than other industry just because of HIPAA. Doing business in the European Union shouldn't be harder because of GDPR. Compliance shouldn't block progress.
-                li
-                  | Give back to the developer community whenever possible. Use open source tools whenever possible. Learn more about our
-                  a.link-arrow href="/open-source"  open source contributions.
-                li We know we can't make the cloud better alone. Industry collaboration is important. Work together for the greater good.
+                li Compliance moves at the <strong>speed of trust</strong>.
+                li <strong>Transparency</strong> is how complex subjects, like HIPAA or GDPR, become easier to understand. We're trusted because we're transparent.
+                li Healthcare application development shouldn't be harder than other industries just because of HIPAA. Doing business in the European Union shouldn't be harder because of GDPR. <strong>Compliance shouldn't block progress</strong>.
+                li Give back to the developer community whenever possible. Use <strong>open source</strong> tools whenever possible. Learn more about our <a class="link-arrow" href="/open-source" title="Open source at Datica">open source contributions</a>.
+                li We know we can't make the cloud better alone. <strong>Industry collaboration</strong> is important. Work together for the greater good.
+                li We are <strong>"solutions-first"</strong>. This means Datica brings our deep healthcare, compliance, and integration expertise to work with customers to find the optimal solution — not a prefab, off-the-shelf product.
             .columns.small-5.medium-3
-              img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/Wya4eSOBXCvaLlatIZN4y/231f374a3323172870f7bcf6b32e5cc1/100m_records.png"
+              /img.lozad alt="company stat" data-src="https://images.ctfassets.net/189dvqdsjh46/Wya4eSOBXCvaLlatIZN4y/231f374a3323172870f7bcf6b32e5cc1/100m_records.png"
 
-.strip.strip-bright
-.bg-gray-12
-  section.section-article.bg-white.drop
-    - execs = data.site.collections.to_a.select { | id, collection | (id == "22eMtdZGs5yignjP47GxYH") }
-    - execs.each do | id, collection |
-      .row.align-center
-        .columns.small-12.medium-8.large-6.text-center.group
-          h2.headline-4.spaced-out = (collection.has_key?("subhead") ? collection.subhead : "Datica Leadership") 
-          /p.lead = (collection.has_key?("desc") ? collection.desc : nil)
-      .row.align-center.small-up-2.medium-up-3.large-up-5
-        - collection["related_entries"].each do | person |
-          .column
-            = partial("partials/snippets/person-vertical-simple", :locals => { :p => person, :classes => "group", :use_headers => true })
-            /.person-simple
-              a href="/about/#{person.slug}" title="Learn more about #{person.fullname}"
-                img.lozad.avatar.avatar--large-mid.circle src="https://images.ctfassets.net/189dvqdsjh46/7dsvS1pbuo2etN908phqGD/4acf3ebbf566f0f31cf74882f6faa3e8/loader-disc.svg" data-src="#{person.profile_pic.url}?f=face&fit=thumb&fm=jpg&fl=progressive&w=250&h=250&fm=jpg&q=60" alt=person.fullname
-      .row.group--2x
-        .column
-          .button-group.align-center
-            = partial "partials/snippets/button", :locals => { :label => "Meet the team", :title => "Get to know our full leadership team", :url => "/leadership/", :button_classes => "button secondary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "leadership", :data_track_group => "datica" }
 
-    .row.align-center
-      .columns.small-12.medium-8.text-center
-        h2.headline-4.spaced-out.group A Strong Backing
-        .row.small-up-2.medium-up-4.align-middle
-          .column
-            img.logo-size--large.img-crisp.lozad alt=("Arthur Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=120" /
-          .column
-            img.logo-size--large.img-crisp.lozad alt=("Baird Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=120" /
-          .column
-            img.logo-size--large.img-crisp.lozad alt=("Chicago Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=120" /
-          .column
-            img.logo-size--large.img-crisp.lozad alt=("Lewis and Clark Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=120" /
-
-  section.section-article
+  /section.section-article
     .row.align-center
       .columns.small-12.medium-10.large-7
-        h5.spaced-out.text-center Milestones
-        #timeline.timeline--vertical
-          #line.line
-          - current_page.data.timeline_company.each do | item |
-            .block
-              .date
-                span
-                  = Kramdown::Document.new(item.date).to_html
-              span.dot
-              .content
-                = Kramdown::Document.new(item.body).to_html
+        h5.spaced-out.text-center Datica By the Numbers
+    .row.align-center.align-middle.small-up-3.medium-up-4.large-up-7
+      - current_page.data.stats_list.each do | stat |
+        .column
+          - if stat.url != ""
+            a href=stat.url title=stat.desc
+              img.lozad width=stat.width data-src=stat.image alt=stat.desc
+          - else
+              img.lozad width=stat.width data-src=stat.image alt=stat.desc
 
-section.section-article.bg-gray-11
+section.section-article.bg-gray-12
+  .row.align-center
+    .columns.small-12.medium-8.large-7
+      h5.spaced-out.text-center Milestones
+      #timeline.timeline--vertical
+        #line.line
+        - current_page.data.timeline_company.each do | item |
+          .block
+            .date
+              span
+                = Kramdown::Document.new(item.date).to_html
+            span.dot
+            .content
+              = Kramdown::Document.new(item.body).to_html
+    .columns.small-12.medium-4.large-3.text-center
+      - current_page.data.stats_list.each do | stat |
+        .group
+          - if stat.url != ""
+            a href=stat.url title=stat.desc
+              img.lozad width=stat.width data-src=stat.image alt=stat.desc
+          - else
+              img.lozad width=stat.width data-src=stat.image alt=stat.desc
+
+/.strip.strip-bright
+section.section-article.bg-white.drop--big
+  - execs = data.site.collections.to_a.select { | id, collection | (id == "22eMtdZGs5yignjP47GxYH") }
+  - execs.each do | id, collection |
+    .row.align-center
+      .columns.small-12.medium-8.large-6.text-center.group
+        h2.headline-4.spaced-out = (collection.has_key?("subhead") ? collection.subhead : "Datica Leadership") 
+        /p.lead = (collection.has_key?("desc") ? collection.desc : nil)
+    .row.align-center.small-up-2.medium-up-3.large-up-5
+      - collection["related_entries"].each do | person |
+        .column
+          = partial("partials/snippets/person-vertical-simple", :locals => { :p => person, :classes => "group", :use_headers => true })
+          /.person-simple
+            a href="/about/#{person.slug}" title="Learn more about #{person.fullname}"
+              img.lozad.avatar.avatar--large-mid.circle src="https://images.ctfassets.net/189dvqdsjh46/7dsvS1pbuo2etN908phqGD/4acf3ebbf566f0f31cf74882f6faa3e8/loader-disc.svg" data-src="#{person.profile_pic.url}?f=face&fit=thumb&fm=jpg&fl=progressive&w=250&h=250&fm=jpg&q=60" alt=person.fullname
+    .row.group--2x
+      .column
+        .button-group.align-center
+          = partial "partials/snippets/button", :locals => { :label => "Meet the team", :title => "Get to know our full leadership team", :url => "/leadership/", :button_classes => "button secondary", :icon => "icon-chevron-right", :icon_align => "right", :item_id => "leadership", :data_track_group => "datica" }
+
+  .row.align-center
+    .columns.small-12.medium-8.text-center
+      h2.headline-4.spaced-out.group A Strong Backing
+      .row.small-up-2.medium-up-4.align-middle
+        .column
+          img.logo-size--large.img-crisp.lozad alt=("Arthur Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4cObssAG4goygs6kYoggm6/125b40ff261847103d0d9c9fc22d4393/av-logo.png?h=120" /
+        .column
+          img.logo-size--large.img-crisp.lozad alt=("Baird Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/54MNeLPfOM68gyIya8sySU/1ae051e26424b0888c0bb93d8d3ba0b3/bc-logo.png?h=120" /
+        .column
+          img.logo-size--large.img-crisp.lozad alt=("Chicago Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/4BIGV3EJ9SmayOc8YOyeui/f38bf67be633f330fa5470de6e55bd34/cv-logo.png?h=120" /
+        .column
+          img.logo-size--large.img-crisp.lozad alt=("Lewis and Clark Ventures") data-src="https://images.ctfassets.net/189dvqdsjh46/6bhxfVnDKEUmWcC28Esk4I/9ff2c80e24438b3356e58470f9b61f9f/lavc-logo.png?h=120" /
+
+
+section.bg-gray-3.container-image--center.lozad data-background-image="https://images.ctfassets.net/189dvqdsjh46/5sg4ICUpO4m4eX5nAwerir/abc651f00fcedcfba995a551804067d9/Datica_cities_-_live_where_you_want.jpg?w=1600" style="border: 10px solid black;"
+  .section-article.container-color--tint-20
+    .row.align-center
+      .columns.small-12.medium-10.large-9.text-center
+        = inline_svg("map-with-pin", class: "icon-size--xlarge")
+        h2.headline-4.spaced-out Work at Datica
+        h4.headline-1 We hire the best. Live where you want.
+        p.lead Datica is a fully remote company, inside and out. Our team is all over the US, with clusters in Madison, Denver, San Francisco, Portland, and Seattle. We are looking for the best people in their fields — no matter where you are.
+        = partial "partials/snippets/button", :locals => { :label => "See open positions", :url => "/careers/", :button_classes => "button button--light", :item_id => "careers", :icon => "icon-angle-right", :icon_align => "right" }
+
+/section.section-article.bg-gray-11
   .row.align-center
     .columns.small-12.medium-10.large-6
       = partial "partials/section-promos/careers", :locals => { :tagline => "We're building a team to transform healthcare. Join us!" }
